Fixed nav alignment issue

--- a/public/stylesheets/generic_style.css
+++ b/public/stylesheets/generic_style.css
@@ -26,6 +26,7 @@ a {
 .row {
   max-width: 1200px !important;
   margin: 0 auto;
+  width: 100%;
 }
 
 .divide {
@@ -331,10 +332,10 @@ a {
 /*-- Index Body Styles --*/
 
 div.sub-nav{
-  display: block;
+  /*display: block;*/
   overflow: hidden;
-  margin-bottom: 0.5%;
-  margin-right: 0;
+  /*margin-bottom: 0.5%;*/
+  /*margin-right: 0;*/
 }
 
 .sub-nav {
@@ -342,17 +343,23 @@ div.sub-nav{
   height: 50px;
   padding-top: 15px;
   color:#fff;
-  text-align:center;
-  margin-left: 0px;
-  margin-top: 0;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.squeeze {
+  position: relative;
 }
 
 .sub-name{
   width: auto;
   margin: auto;
   display: inline;
-  padding: 5%;
+  padding: 4%;
   font-size: 0.8rem;
+  /*position: absolute;*/
+  /*left: 0;*/
 }
 
 .sub-name img{
